force-app/main/default/objects/AppointmentManagerFrontProperty__mdt/AppointmentManagerFrontProperty__mdt.object-meta.xml
<CustomObject>
    <label>AppointmentManagerFrontProperty</label>
    <pluralLabel>AppointmentManagerFrontProperties</pluralLabel>
</CustomObject>