force-app/main/default/objects/AppointmentManagerFrontProperty__mdt/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <length>4</length>
    <type>Text</type>
</CustomField>