force-app/main/default/objects/AppointmentManagerFrontProperty__mdt/fields/CountryAuxi__c.field-meta.xml
<CustomField>
    <fullName>CountryAuxi__c</fullName>
    <label>CountryAuxi</label>
    <length>40</length>
    <type>Text</type>
</CustomField>