force-app/main/default/objects/AppointmentManagerFrontProperty__mdt/fields/DateFormat__c.field-meta.xml
<CustomField>
    <fullName>DateFormat__c</fullName>
    <description>Formato de fecha</description>
    <label>Date Format</label>
    <length>50</length>
    <type>Text</type>
</CustomField>