force-app/main/default/objects/AppointmentManagerFrontProperty__mdt/fields/HasAssociates__c.field-meta.xml
<CustomField>
    <fullName>HasAssociates__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Si tiene asociados para mostrar en la web</description>
    <label>Has Associates</label>
    <type>Checkbox</type>
</CustomField>