force-app/main/default/objects/AppointmentManagerFrontProperty__mdt/fields/LatitudeInit__c.field-meta.xml
<CustomField>
    <fullName>LatitudeInit__c</fullName>
    <label>LatitudeInit</label>
    <length>30</length>
    <type>Text</type>
</CustomField>