force-app/main/default/objects/AppointmentManagerFrontProperty__mdt/fields/LongitudeInit__c.field-meta.xml
<CustomField>
    <fullName>LongitudeInit__c</fullName>
    <label>LongitudeInit</label>
    <length>30</length>
    <type>Text</type>
</CustomField>