force-app/main/default/objects/AppointmentManagerFrontProperty__mdt/fields/NameShown__c.field-meta.xml
<CustomField>
    <fullName>NameShown__c</fullName>
    <description>Nombre que se muestra del país</description>
    <label>Name Shown</label>
    <length>100</length>
    <type>Text</type>
</CustomField>