force-app/main/default/objects/AppointmentManagerFrontProperty__mdt/fields/PrivacyPolicyUrl__c.field-meta.xml
<CustomField>
    <fullName>PrivacyPolicyUrl__c</fullName>
    <description>Url de la página de politica de privacidad del país</description>
    <label>Privacy Policy Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>