force-app/main/default/objects/AppointmentManagerFrontProperty__mdt/fields/ZoomFinder__c.field-meta.xml
<CustomField>
    <fullName>ZoomFinder__c</fullName>
    <label>ZoomFinder</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>