force-app/main/default/objects/AppointmentManagerFrontProperty__mdt/fields/ZoomFinderCountry__c.field-meta.xml
<CustomField>
    <fullName>ZoomFinderCountry__c</fullName>
    <label>ZoomFinderCountry</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>