force-app/main/default/objects/AppointmentManagerFrontProperty__mdt/fields/ZoomFinderState__c.field-meta.xml
<CustomField>
    <fullName>ZoomFinderState__c</fullName>
    <label>ZoomFinderState</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>