force-app/main/default/objects/AppointmentManagerFrontProperty__mdt/fields/ZoomGeneral__c.field-meta.xml
<CustomField>
    <fullName>ZoomGeneral__c</fullName>
    <label>ZoomGeneral</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>