force-app/main/default/objects/AppointmentManagerFrontProperty__mdt/fields/ZoomStore__c.field-meta.xml
<CustomField>
    <fullName>ZoomStore__c</fullName>
    <label>ZoomStore</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>